// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches default snapshot 1`] = `
<div>
  <div
    class="Box"
  >
    <div
      style="height: 50px; width: 50px; background-color: blue;"
    />
    <button
      class="Box-button"
    >
      Remove The Box!
    </button>
  </div>
</div>
`;

exports[`matches modified box snapshot 1`] = `
<div>
  <div
    class="Box"
  >
    <div
      style="height: 25px; width: 25px; background-color: red;"
    />
    <button
      class="Box-button"
    >
      Remove The Box!
    </button>
  </div>
</div>
`;
